# Dragon-Hunters

./: .gitignore  LICENSE.txt  README.txt  dragon_hunters.py  font_manager.py  pyproject.toml  setup.bat  version.txt
assets/: credits.txt
assets/audio/music/: hat_pattern.txt  pause.txt  water_ambience.txt
assets/audio/other/: encounter.txt  flee.txt
assets/fonts/: font.txt
data/battles/: 0.json
data/dialog/: 0.json  1.json
data/levels/: a  b
data/text/: loading_hints.json
save_data/: controls.json  options.json
